build: Optimize startup scripts